@@ -21,7 +21,6 @@ import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Enumeration;
 import java.util.LinkedList;
 import java.util.List;
@@ -30,7 +29,6 @@ import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 import org.eclipse.jdt.annotation.NonNull;
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -388,13 +386,13 @@ public abstract class AbstractResourceBundleProvider<@NonNull E> {
                 URI uri = new URI(prefix + ":" + uid + ".name");
                 return config.stream()
                         .map(p -> localConfigI18nService.getLocalizedConfigDescriptionParameter(bundle, uri, p, locale))
-                        .collect(Collectors.toList());
+                        .toList();
             } catch (URISyntaxException e) {
                 logger.error("Constructed invalid uri '{}:{}.name'", prefix, uid, e);
                 return config;
             }
         }
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -434,7 +432,7 @@ public abstract class AbstractResourceBundleProvider<@NonNull E> {
                 }
             }
         }
-        return Collections.emptySet();
+        return Set.of();
     }
 
     @SuppressWarnings("unchecked")
