@@ -12,7 +12,6 @@
  */
 package org.openhab.core.io.console.internal.extension;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -65,7 +64,7 @@ public class MetadataConsoleCommandExtension extends AbstractConsoleCommandExten
 
     @Override
     public List<String> getUsages() {
-        return Arrays.asList( //
+        return List.of( //
                 buildCommandUsage(SUBCMD_LIST + " [<itemName> [<namespace>]]",
                         "lists all available metadata, can be filtered for a specifc item and namespace"),
                 buildCommandUsage(SUBCMD_LIST_INTERNAL + " [<itemName> [<namespace>]]",
