@@ -14,10 +14,9 @@ package org.openhab.core.io.transport.serial.internal;
 
 import java.net.URI;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashSet;
+import java.util.Set;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.openhab.core.io.transport.serial.ProtocolType.PathType;
@@ -79,12 +78,12 @@ public class SerialPortRegistry {
                     .count() > 0;
         }
 
-        return portCreators.stream().filter(filter).collect(Collectors.toList());
+        return portCreators.stream().filter(filter).toList();
     }
 
     public Collection<SerialPortProvider> getPortCreators() {
         synchronized (portCreators) {
-            return Collections.unmodifiableCollection(new HashSet<>(portCreators));
+            return Set.copyOf(portCreators);
         }
     }
 }
