@@ -14,7 +14,6 @@ package org.openhab.core.common.registry;
 
 import java.util.Collection;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import org.eclipse.jdt.annotation.NonNull;
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -70,8 +69,7 @@ public abstract class AbstractManagedProvider<@NonNull E extends Identifiable<K>
 
     @Override
     public Collection<E> getAll() {
-        return (Collection<E>) storage.getKeys().stream().map(this::getElement).filter(Objects::nonNull)
-                .collect(Collectors.toList());
+        return (Collection<E>) storage.getKeys().stream().map(this::getElement).filter(Objects::nonNull).toList();
     }
 
     @Override
@@ -120,7 +118,7 @@ public abstract class AbstractManagedProvider<@NonNull E extends Identifiable<K>
                 return oldElement;
             }
         } else {
-            logger.warn("Could not update element with key {} in {}, because it does not exists.", key,
+            logger.warn("Could not update element with key {} in {}, because it does not exist.", key,
                     this.getClass().getSimpleName());
         }
 
